--- a/modularized/web/templates/labs.html
+++ b/modularized/web/templates/labs.html
@@ -89,3 +89,11 @@
 
 
 {% endblock %}
+
+<script async src="https://telegram.org/js/telegram-widget.js?7"
+        data-telegram-login="incompoop_bot"
+        data-size="large"
+        data-userpic="false"
+        data-request-access="write"
+        data-auth-url="https://yourdomain.com/telegram_callback">
+</script>
