--- a/modularized/web/templates/labs.html
+++ b/modularized/web/templates/labs.html
@@ -23,7 +23,17 @@
         <input type="email" class="form-control" name="lab_safety_email" id="new_lab_email" required>
 
         <label for="new_lab_telegram" class="my-2">Lab Safety Telegram:</label>
-        <input type="telegram" class="form-control" name="lab_safety_telegram" id="new_lab_telegram">
+        <input type="telegram" class="form-control" name="lab_safety_telegram" id="new_lab_telegram"
+          value="{{ session.telegram_username if session.telegram_username else ''}}">
+        <div class="mt-3">
+          <h5>Login with Telegram</h5>
+          <div id="telegram-login-button">
+            <script async src="https://telegram.org/js/telegram-widget.js?7" data-telegram-login="incompoop_bot"
+              data-size="large" data-userpic="false" data-request-access="write"
+              data-auth-url="https://rident-zoila-unhistoric.ngrok-free.dev/telegram_callback" data-lang="en">
+              </script>
+          </div>
+        </div>
       </div>
       <button type="submit" class="btn btn-primary mt-2">Add Lab</button>
     </form>
@@ -89,11 +99,3 @@
 
 
 {% endblock %}
-
-<script async src="https://telegram.org/js/telegram-widget.js?7"
-        data-telegram-login="incompoop_bot"
-        data-size="large"
-        data-userpic="false"
-        data-request-access="write"
-        data-auth-url="https://yourdomain.com/telegram_callback">
-</script>
