--- a/modularized/web/templates/labs.html
+++ b/modularized/web/templates/labs.html
@@ -59,17 +59,22 @@
         </tr>
         </thead>
         <tbody>
-        <form method="post" action="{{ url_for('labs') }}">
+        
             <tr>
                 <td>{{ lab.labid }}</td>
-                <td>
-                    <input type="text" name="new_lab_name" class="form-control" value="{{ lab.lab_name }}">
-                </td>
-                <td>
-                    <input type="hidden" name="action" value="update">
-                    <input type="hidden" name="lab_id" value="{{ lab.labid }}">
-                    <button type="submit" class="btn btn-primary">Update</button>
-                </td>
+
+                <form method="post" action="{{ url_for('labs') }}">
+                    <td>
+                        <div class="form-group">
+                            <input type="text" name="new_lab_name" class="form-control" value="{{ lab.lab_name }}">
+                        </div>
+                    </td>
+                    <td>
+                        <input type="hidden" name="action" value="update">
+                        <input type="hidden" name="lab_id" value="{{ lab.labid }}">
+                        <button type="submit" class="btn btn-primary">Update</button>
+                    </td>
+                </form>
                 <form method="post" action="{{ url_for('labs') }}"
                     onsubmit="return confirm('WARNING: Are you sure you want to delete this lab? This action cannot be undone.')">
                     <td>
@@ -79,7 +84,7 @@
                     </td>
                 </form>
             </tr>
-        </form>
+    
         </tbody>
 
     </table>
